refactor: 컨벤션 수정