@@ -2,7 +2,6 @@ package domain;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public enum CardValue {
 
@@ -30,7 +29,7 @@ public enum CardValue {
 
     public static List<CardValue> cardValues() {
         return Arrays.stream(CardValue.values())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public String getRank() {
